--- a/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
+++ b/packages/buckets/compositions/object-store/test/scenarios/standard/claim.yaml
@@ -4,6 +4,7 @@ metadata:
   name: example-object-store
 spec:
   parameters:
+    clusterName: "example-cluster"
     objectStoreProvider: "ceph"
     bucketName: "my-example-bucket2"
     Namespace: temp
