--- a/packages/objectstores/compositions/object-store/resources/definition.yaml
+++ b/packages/objectstores/compositions/object-store/resources/definition.yaml
@@ -79,35 +79,31 @@ spec:
                         type: string
                         description: Maximum number of objects in the bucket
                         default: "1000"
-                      objectStore_ext_svc_name:
-                        type: string
-                        description: Name of the external service to use for the bucket creation.
-                        default: "object-store-external-svc"
-                      eso_pushsecret:
+                      esoPushSecret:
                         type: boolean
                         description: Whether to push the secret to vault.
                         default: false
-                      eso_push_secret_update_policy:
+                      esoUpdatePolicy:
                         type: string
                         description: Policy to update the secret on vault.
                         default: "Replace"
-                      eso_push_secret_delete_policy:
+                      esoDeletePolicy:
                         type: string
                         description: Policy to delete the secret on vault.
                         default: "Delete"
-                      eso_push_secret_refresh_interval:
+                      esoRefreshInterval:
                         type: string
                         description: Interval to refresh the secret on vault.
                         default: "1h"
-                      vault_secrestore_name:
+                      vaultSecretStore:
                         type: string
                         description: Name of the secretstore on cluster for vault.
                         default: "vault-secret-store"
-                      vault_secret_store_kind:
+                      vaultSecretStoreKind:
                         type: string
                         description: Kind of the secret store in vault.
                         default: "ClusterSecretStore"
-                      vault_secret_path:
+                      vaultSecretPath:
                         type: string
                         description: Path of the secret in vault.
                   s3:
