--- a/packages/objectstores/compositions/object-store/test/scenarios/standard/claim.yaml
+++ b/packages/objectstores/compositions/object-store/test/scenarios/standard/claim.yaml
@@ -18,6 +18,6 @@ spec:
       ccK8sProviderName: "kubernetes-provider"
       storageClassName: "ceph-bucket"
       maxSize: "1Gi"
-      eso_pushsecret: true
-      vault_secrestore_name: "vault-backend"
-      vault_secret_path: "objectstore/my_example_bucket"
+      esoPushSecret: true
+      vaultSecretStore: "vault-backend"
+      vaultSecretPath: "objectstore/my_example_bucket"
