--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -49,7 +49,7 @@ jobs:
           fi
 
   pull-request-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@feat/CTO-1001_align_packages
+    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🧪 PR Preview Package
     needs: [calculate-version]
     if: ${{ github.ref_type != 'tag' && github.ref != 'refs/heads/main' }}
@@ -61,7 +61,7 @@ jobs:
       NEXT_VERSION: v${{ needs.calculate-version.outputs.next_version }}
 
   release-package:
-    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@feat/CTO-1001_align_packages
+    uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
     name: 🚀 Release Package
     needs: [calculate-version]
     if: ${{ github.ref_type == 'tag' }}
