--- a/.github/workflows/xplane_workflow_matrix.yaml
+++ b/.github/workflows/xplane_workflow_matrix.yaml
@@ -26,7 +26,6 @@ jobs:
         env:
           PR_HEAD: ${{ github.event.pull_request.head.sha || github.sha }}
           PR_BASE: ${{ github.event.pull_request.base.sha || '' }}
-          PR_BASE_REF: ${{ github.event.pull_request.base.ref || 'main' }}
           BEFORE: ${{ github.event.before || '' }}
         run: |
           CROSSPLANE_PACKAGES_DIR="packages"
@@ -34,27 +33,20 @@ jobs:
           CHANGED_DIRS=""
           BASE=""
 
-          if [[ "${{ github.ref_type }}" == "tag" ]]; then
-            for DIR in $DIRECTORIES; do
+          if [[ "${GITHUB_REF}" == 'refs/heads/main' ]]; then
+            # On main branch, compare with previous commit
+            BASE="${BEFORE:-HEAD^}"
+          else
+            # On any other branch, compare with main
+            BASE="origin/main"
+          fi
+
+          for DIR in $DIRECTORIES; do
+            if git diff --name-only $BASE HEAD | grep -q "^$DIR/"; then
               PACKAGE_NAME=$(basename "$DIR")
               CHANGED_DIRS="$PACKAGE_NAME;$CHANGED_DIRS"
-            done
-          else
-            if [[ "${{ github.event_name }}" == "pull_request" && -n "${PR_BASE}" ]]; then
-              BASE="${PR_BASE}"
-            elif [[ "${GITHUB_REF}" == 'refs/heads/main' ]]; then
-              BASE="${BEFORE:-HEAD^}"
-            else
-              BASE=$(git merge-base ${PR_BASE} ${PR_HEAD} 2>/dev/null || echo 'HEAD^')
             fi
-
-            for DIR in $DIRECTORIES; do
-              if git diff --name-only $BASE HEAD | grep -q "^$DIR/"; then
-                PACKAGE_NAME=$(basename "$DIR")
-                CHANGED_DIRS="$PACKAGE_NAME;$CHANGED_DIRS"
-              fi
-            done
-          fi
+          done
 
           if [ -z "$CHANGED_DIRS" ]; then
             echo "matrix=[]" >> $GITHUB_OUTPUT
