--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -40,12 +40,14 @@ jobs:
         id: version
         run: |
           # Get version, take only the last line and remove whitespace/newlines
-          VERSION=$(bash .github/scripts/get-next-version.sh ${{ inputs.package }} | tail -n1 | tr -d '\n')
+          BASE_VERSION=$(bash .github/scripts/get-next-version.sh ${{ inputs.package }} | tail -n1 | tr -d '\n')
 
           # Add suffix if needed
           if [[ "${{ github.ref_type }}" != "tag" && "${{ github.ref }}" != "refs/heads/main" ]]; then
             SUFFIX="-pr${{ github.event.pull_request.number || '' }}-${{ github.run_id }}"
-            VERSION="${VERSION}${SUFFIX}"
+            VERSION="v${BASE_VERSION}${SUFFIX}"
+          else
+            VERSION="v${BASE_VERSION}"
           fi
 
           echo "next_version=${VERSION}" >> $GITHUB_OUTPUT
