--- a/.github/workflows/xplane_workflow.yaml
+++ b/.github/workflows/xplane_workflow.yaml
@@ -63,7 +63,7 @@ jobs:
       CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
       CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
       SUBPATH: ${{ inputs.package }}
-      NEXT_VERSION: ${{ needs.calculate-version.outputs.next_version }}
+      NEXT_VERSION: ${{ needs.calculate-version.outputs.next_version }}  # Already includes 'v'
 
   release-package:
     uses: mojaloop/iac-crossplane-packages/.github/workflows/xplane_pull_request.yaml@main
@@ -75,4 +75,4 @@ jobs:
       CROSSPLANE_PACKAGES_DIR: ${{ inputs.packages_dir }}
       CROSSPLANE_REGISTRY_URL: ${{ inputs.registry }}
       SUBPATH: ${{ inputs.package }}
-      NEXT_VERSION: ${{ needs.calculate-version.outputs.next_version }}
+      NEXT_VERSION: ${{ needs.calculate-version.outputs.next_version }}  # Already includes 'v'
