--- a/packages/sc-nboperatorinstall/configuration/crossplane.yaml
+++ b/packages/sc-nboperatorinstall/configuration/crossplane.yaml
@@ -2,11 +2,13 @@
 apiVersion: meta.pkg.crossplane.io/v1alpha1
 kind: Configuration
 metadata:
-  name: netbird
+  name: sc-nboperatorinstall
 spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
       version: ">=v0.14.1"
+    - provider: ghcr.io/infitx-org/netbird-crossplane-provider
+      version: ">=v0.0.6"
     ## Functions
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
       version: ">=v0.9.0"
