chore: improve CICD validation step

--- a/.github/workflows/xplane_pull_request.yaml
+++ b/.github/workflows/xplane_pull_request.yaml
@@ -60,7 +60,26 @@ jobs:
         working-directory: ${{ inputs.CROSSPLANE_PACKAGES_DIR }}
         run: |
           echo "🔍 Preparing package for ${{ inputs.SUBPATH }}"
-          make all PACKAGE_NAME=${{ inputs.SUBPATH }}
+          # Run make all and capture output
+          OUTPUT=$(make all PACKAGE_NAME=${{ inputs.SUBPATH }} 2>&1)
+          echo "$OUTPUT"
+
+          # Check for validation failures
+          if echo "$OUTPUT" | grep -q "failure cases"; then
+            echo "❌ Validation failed! Found failure cases in the output"
+            # Extract and display the failure details
+            echo "Validation Failures:"
+            echo "$OUTPUT" | grep "\[x\]"
+            exit 1
+          fi
+
+          # Check for missing schemas (optional, depending on your requirements)
+          if echo "$OUTPUT" | grep -q "missing schemas"; then
+            echo "⚠️ Warning: Found missing schemas in the output"
+            echo "$OUTPUT" | grep "schemas does not exist"
+          fi
+
+          echo "✅ Validation completed successfully"
 
       - name: 📦 Create Package
         working-directory: ${{ inputs.CROSSPLANE_PACKAGES_DIR }}
