fix: makefile local-compositons usage

--- a/packages/Makefile
+++ b/packages/Makefile
@@ -18,7 +18,7 @@ DEFINITION_OUTPUT := $(RENDERED_DIR)/definition.yaml
 FUNCTIONS_FILE := $(TEST_DIR)/functions.yaml
 OBSERVED_FILE := $(TESTSCENARIOS_DIR)/observed.yaml
 EXTRA_RESOURCES_FILE := $(TESTSCENARIOS_DIR)/extra.yaml
-LOCAL_COMPOSITIONS_FILE := $(TESTSCENARIOS_DIR)/local-compositions.yaml
+LOCAL_COMPOSITIONS_FILE := $(TEST_DIR)/local-compositions.yaml
 
 TESTSCENARIO ?=
 CLAIM_FILE ?=
