feat: improve test scenarious

--- a/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
+++ b/packages/objectstores/compositions/object-store/test/scenarios/s3/claim.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   parameters:
     clusterName: "example-cluster"
-    objectStoreProvider: "ceph"
+    objectStoreProvider: "s3"
     bucketName: "my-example-bucket2"
     Namespace: temp
     s3:
