--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -77,7 +77,7 @@ spec:
                       type: string
                       description: The name of the nb service user to create to own sc cluster nb access token.
                     accessTokenExpiresInDays:
-                      type: int
+                      type: number
                       description: The number of days in which token expires after creation.
                     nbManagmentURI:
                       type: string
@@ -97,3 +97,9 @@ spec:
                     operatorArgoAppSourceRevision:
                       type: string
                       description: Revision for argo app source.
+                    localAccessTokenSecretName:
+                      type: string
+                      description: Local name of secret to store accesstoken
+                    localAccessTokenSecretNamespace:
+                      type: string
+                      description: Local Namespace of secret to store accesstoken
