--- a/packages/objectstores/configuration/crossplane.yaml
+++ b/packages/objectstores/configuration/crossplane.yaml
@@ -7,6 +7,12 @@ spec:
   dependsOn:
     - provider: xpkg.upbound.io/crossplane-contrib/provider-kubernetes
       version: ">=v0.14.1"
+    - provider: xpkg.upbound.io/crossplane-contrib/provider-aws
+      version: ">=v0.49.2"
+    - provider: xpkg.upbound.io/upbound/provider-aws-s3
+      version: ">=v1.21.0"
+    - provider: xpkg.upbound.io/upbound/provider-aws-iam
+      version: ">=v1.21.0"
     - provider: xpkg.upbound.io/crossplane-contrib/function-kcl
       version: ">=v0.9.0"
     - function: xpkg.upbound.io/crossplane-contrib/function-auto-ready
