--- a/packages/objectstores/compositions/s3-buckets/test/scenarios/standard/claim.yaml
+++ b/packages/objectstores/compositions/s3-buckets/test/scenarios/standard/claim.yaml
@@ -3,6 +3,8 @@ kind: XS3Bucket
 metadata:
   name: test-bucket101
 spec:
+  managementPolicies:
+    - "*"
   parameters:
     bucketName: "test-bucket101"
     bucketRegion: "eu-west-1"
