--- a/packages/utils/compositions/remote-namespace/resources/composition.yaml
+++ b/packages/utils/compositions/remote-namespace/resources/composition.yaml
@@ -3,7 +3,7 @@ kind: Composition
 metadata:
   name: remotenamespace
   labels:
-    crossplane.io/xrd: remotenamespace.utils.mojaloop.io
+    crossplane.io/xrd: xremotenamespace.utils.mojaloop.io
 spec:
   compositeTypeRef:
     apiVersion: utils.mojaloop.io/v1alpha1
