--- a/packages/utils/compositions/remote-namespace/resources/definition.yaml
+++ b/packages/utils/compositions/remote-namespace/resources/definition.yaml
@@ -1,7 +1,7 @@
 apiVersion: apiextensions.crossplane.io/v1
 kind: CompositeResourceDefinition
 metadata:
-  name: remotenamespace.utils.mojaloop.io
+  name: xremotenamespace.utils.mojaloop.io
 spec:
   defaultCompositeDeletePolicy: Foreground
   group: utils.mojaloop.io
