fix: github actions to allow merge commits

--- a/.github/workflows/xplane_workflow_matrix.yaml
+++ b/.github/workflows/xplane_workflow_matrix.yaml
@@ -41,8 +41,8 @@ jobs:
               continue
             fi
 
-            # Check if it's a merge commit
-            if [[ $COMMIT_MSG == "Merge"* ]]; then
+            # Check if it's a merge commit (any message starting with "Merge")
+            if [[ $COMMIT_MSG =~ ^Merge ]]; then
               echo "Merge commit detected, skipping: $COMMIT_MSG"
               continue
             fi
