--- a/.github/workflows/xplane_workflow_matrix.yaml
+++ b/.github/workflows/xplane_workflow_matrix.yaml
@@ -22,15 +22,15 @@ jobs:
         run: |
           # Get all commits in the PR/branch
           if [[ "${{ github.event_name }}" == "pull_request" ]]; then
-            COMMITS=$(git log --format=%B ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
+            COMMITS=$(git log --format=%s ${{ github.event.pull_request.base.sha }}..${{ github.event.pull_request.head.sha }})
           else
             # For push events, check the pushed commits
-            COMMITS=$(git log --format=%B ${{ github.event.before }}..${{ github.event.after }})
+            COMMITS=$(git log --format=%s ${{ github.event.before }}..${{ github.event.after }})
           fi
 
           # Conventional commit regex pattern
           # Format: type(scope): description
-          PATTERN='^(build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\([a-z0-9-]+\))?: .+'
+          PATTERN='^((build|chore|ci|docs|feat|fix|perf|refactor|revert|style|test)(\([a-z0-9-]+\))?: .+|Merge .+)'
 
           # Flag to track if any non-compliant commits were found
           FOUND_BAD_COMMIT=0
@@ -38,12 +38,6 @@ jobs:
           while IFS= read -r COMMIT_MSG; do
             # Skip empty lines
             if [ -z "$COMMIT_MSG" ]; then
-              continue
-            fi
-
-            # Check if it's a merge commit (any message starting with "Merge")
-            if [[ $COMMIT_MSG =~ ^Merge ]]; then
-              echo "Merge commit detected, skipping: $COMMIT_MSG"
               continue
             fi
 
