--- a/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/claim.yaml
+++ b/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/claim.yaml
@@ -1,22 +1,10 @@
 apiVersion: sc.mojaloop.io/v1alpha1
-kind: XPGCluster
+kind: XSCBootstrap
 metadata:
-  name: db_name
+  name: name
   namespace: namespace
 spec:
   parameters:
-    consumerClusterType: controlcenter
-    clusterName: cluster_name #TODO
-    externalServiceName: externalservice_name
-    appNamespace: foo
-    postgres:
-      crVersion: "2.5.0"
-      pgVersion: 16
-      dbSecret: db_secret
-      dbUsername: dbuser
-      dbName: dbname
-      replicas: 1
-      storageSize: postgres_storage_size
 
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
