--- a/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/claim.yaml
+++ b/packages/sc-bootstrap/compositions/scbootstrap/test/scenarios/standard/claim.yaml
@@ -4,10 +4,9 @@ metadata:
   name: name
   namespace: namespace
 spec:
-  parameters:
+  parameters: {}
 
   providerConfigsRef:
     scK8sProviderName: sc-kubernetes-provider
-    ccK8sProviderName: kubernetes-provider
   managementPolicies:
     - "*"
