fix: add group for kubeap access

--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/resources/definition.yaml
@@ -106,3 +106,12 @@ spec:
                     operatorKubeapiGroup:
                       type: string
                       description: group name to give access to kubeapi
+                    netbirdProjectIdSecretName:
+                      type: string
+                      description: secret name to fetch netbird prooject id
+                    netbirdProjectIdSecretNamespace:
+                      type: string
+                      description: secret namespace to fetch netbird prooject id
+                    netbirdProjectIdSecretKey:
+                      type: string
+                      description: secret key to fetch netbird prooject id
