--- a/packages/sc-nboperatorinstall/compositions/nboperatorinstall/test/scenarios/standard/claim.yaml
+++ b/packages/sc-nboperatorinstall/compositions/nboperatorinstall/test/scenarios/standard/claim.yaml
@@ -15,7 +15,10 @@ spec:
     operatorArgoAppSourceRevision: "feat/np-op-install"
     localAccessTokenSecretName: localsecret
     localAccessTokenSecretNamespace: localsecretns
-    operatorKubeapiGroup: groupname
+    operatorKubeapiGroup: "techops-admin"
+    netbirdProjectIdSecretName: netbird-management
+    netbirdProjectIdSecretNamespace: netbird
+    netbirdProjectIdSecretKey: netbird_project_id
   providerConfigsRef:
     netbirdProviderConfigName: "netbird-provider-config"
     ccK8sProviderName: "cc-kubernetes-provider"
