chore: add default argocd version

--- a/packages/sc-bootstrap/compositions/scbootstrap/resources/definition.yaml
+++ b/packages/sc-bootstrap/compositions/scbootstrap/resources/definition.yaml
@@ -67,6 +67,7 @@ spec:
                     properties:
                       chartVersion:
                         type: string
+                        default: "7.8.23"
                         description: |-
                           The version of the chart to deploy.
                       application:
